# deduplikate

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.sh
data/: deduplikate.desktop
src/: duplicatefinder.cpp  duplicatefinder.h  duplicatemodel.cpp  duplicatemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
src/czkawka_bridge/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  czkawka_bridge.h
src/czkawka_bridge/src/: lib.rs
tests/: CMakeLists.txt
tests/cpp/: test_duplicatemodel.cpp
